# tem

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bitflags.hpp  gameLogic.h  main.h  processInput.h  processOutput.h  processText.h  renderer.h  span.hpp  styledScreen.h  utf8.h
include/platform/: input.h  shell.h  tools.h  window.h
resources/: resources.rc
src/: main.cpp  processInput.cpp  processOutput.cpp  processText.cpp  renderer.cpp  styledScreen.cpp  utf8.cpp
src/platform/: glfwMain.cpp  input.cpp  shell.cpp  theme.cpp  tools.cpp
